--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Webb-orbit/demo.git"
   },
-  "author": "subhr",
+  "author": "subhro",
   "license": "ISC",
   "keywords": [
     "markdown",
